@@ -1,0 +1,5 @@
+class String
+  def too_cute
+    {:type => 'string', :string => self}
+  end
+end
